<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EarnMoney">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/qureka_play"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="7dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="2.5dp"
            app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/qureka"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qureka"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>


        </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/upstox_play"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="7dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="2.5dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/upstox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upstox"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/icici_play"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="7dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="2.5dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icici"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icici"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/gamezop_games_banner1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="7dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="2.5dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/gamezop_game_banner"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Play 200+ Free Games Without Download!"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/gamezop_quize_banner1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="7dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="2.5dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/gamezop_quize_banner"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Solve Free Quize And Win Real Cash Without Download!"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            android:layout_gravity="center_horizontal"
            ads:adUnitId="ca-app-pub-6972616661119579/9831874281">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>